# jupyter-mcp-server

./: .gitignore  .licenserc.yaml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  RELEASE.md  pyproject.toml  smithery.yaml
.github/: dependabot.yml
.github/workflows/: build.yml  fix-license-header.yml  lint.sh
dev/content/: README.md  notebook.ipynb
docs/: Makefile  README.md  babel.config.js  docusaurus.config.js  package.json  sidebars.js
docs/_tmp/fine-tuned/: _category_.yaml  index.mdx
docs/_tmp/llama3/: _category_.yaml  index.mdx
docs/docs/: _category_.yaml  index.mdx
docs/src/components/: HomepageFeatures.js  HomepageFeatures.module.css  HomepageProducts.js  HomepageProducts.module.css
docs/src/css/: custom.css
docs/src/pages/: index.js  index.module.css  markdown-page.md  testimonials.tsx
jupyter_lab_server/: Dockerfile  Makefile  docker-compose.yml
jupyter_mcp_server/: __init__.py  __version__.py  server.py
jupyter_mcp_server/tests/: __init__.py
streamlit_app/: __init__.py  app.py
streamlit_app/config/: __init__.py  settings.py
streamlit_app/pages/: 01_📊_Dashboard.py  __init__.py  query.py
streamlit_app/utils/: __init__.py  database.py  helpers.py
